Sticky Positioning fix and first overlap animation effect

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,8 @@
 html,
 body {
   max-width: 100vw; /* Prevent horizontal overflow */
-  overflow-x: hidden; /* Hide horizontal overflow */
+  margin: 0;
+  padding: 0;
 }
 
 body {
