--- a/src/components/01_Header/logoSlider.module.css
+++ b/src/components/01_Header/logoSlider.module.css
@@ -1,7 +1,7 @@
 .marqueeWrapper {
     background-color: #070707;
     width: 100%;
-    padding: 100px 0;
+    padding: 100px 0 200px 0;
     overflow: hidden;
 }
 
